--- a/src/app.css
+++ b/src/app.css
@@ -22,12 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  height: 100%; /* Ensure body spans the entire viewport */
+  width: 100%;
 }
 
 h1 {
@@ -40,9 +43,9 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0;
   text-align: center;
 }
 
