style: add fixed background attachment to body for improved visual effect

--- a/src/app.css
+++ b/src/app.css
@@ -32,6 +32,7 @@ body {
   height: 100%; /* Ensure body spans the entire viewport */
   width: 100%;
   background: linear-gradient(to left bottom, #41d8dd, #5583ee);
+  background-attachment: fixed;
 
 h1 {
   font-size: 3.2em;
