--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -29,59 +30,64 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
-  height: 100%; /* Ensure body spans the entire viewport */
+  height: 100%;
+  /* Ensure body spans the entire viewport */
   width: 100%;
   background: linear-gradient(to left bottom, #41d8dd, #5583ee);
   background-attachment: fixed;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  min-width: 100%;
-  min-height: 100%;
-  margin: 0;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-[role="button"] {
-  cursor: pointer;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
   }
-  a:hover {
-    color: #747bff;
+
+  .card {
+    padding: 2em;
   }
+
+  #app {
+    min-width: 100%;
+    min-height: 100%;
+    margin: 0;
+    text-align: center;
+  }
+
   button {
-    background-color: #f9f9f9;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
   }
-}
+
+  button:hover {
+    border-color: #646cff;
+  }
+
+  button:focus,
+  button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
+
+  [role="button"] {
+    cursor: pointer;
+  }
+
+  @media (prefers-color-scheme: light) {
+    :root {
+      color: #213547;
+      background-color: #ffffff;
+    }
+
+    a:hover {
+      color: #747bff;
+    }
+
+    button {
+      background-color: #f9f9f9;
+    }
+  }
